<resources>
    <string name="app_name">BS Calc</string>
    <string name="button1">Next</string>
    <string name="button2">calculator</string>
    <string name="button3">converter</string>
    <string name="bs_team">©BS Team</string>
    <string name="image">image</string>
    <string name="Back">Back</string>
    <string name="error">Error input one of digit</string>
    <string name="digit">Input one more digit or system</string>
    <string name="system">Bad input number system</string>
    <string name="error1">division by zero</string>
    <string name="number">Input number</string>
    <string name="number2">Input second number</string>
    <string name="startSystem">Start number system</string>
    <string name="startSystem2">Start second number system</string>
    <string name="finishSystem">New number system</string>
    <string name="convert">Convert</string>
    <string name="converter">Converter</string>
    <string name="calculator">Calculator</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="division">÷</string>
    <string name="settings">Settings</string>
    <string name="future">future</string>
    <string name="exit">Exit</string>
</resources>