<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:backgroundTint="@color/background_color"
    android:backgroundTintMode="add">

    <EditText
        android:id="@+id/number1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/text2"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/system1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/startSystem"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textColor="@color/text2"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="@+id/number1"
        app:layout_constraintStart_toStartOf="@+id/number1"
        app:layout_constraintTop_toBottomOf="@+id/number1"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/number2"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/text2"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="@+id/system1"
        app:layout_constraintStart_toStartOf="@+id/system1"
        app:layout_constraintTop_toBottomOf="@+id/system1"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/system2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/startSystem2"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/text2"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="@+id/number2"
        app:layout_constraintStart_toStartOf="@+id/number2"
        app:layout_constraintTop_toBottomOf="@+id/number2"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/new_system"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/finishSystem"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/text2"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="@+id/system2"
        app:layout_constraintStart_toStartOf="@+id/system2"
        app:layout_constraintTop_toBottomOf="@+id/system2"
        android:autofillHints="no" />

    <TextView
        android:id="@+id/answer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/zero"
        android:textColor="@color/text2"
        android:textColorHint="@color/text2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/new_system"
        app:layout_constraintStart_toStartOf="@+id/new_system"
        app:layout_constraintTop_toBottomOf="@+id/new_system" />

    <Button
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button"
        android:text="@string/plus"
        android:textColor="@color/text2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer1"
        app:layout_constraintEnd_toStartOf="@+id/multiply"/>

    <Button
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/button"
        android:text="@string/minus"
        android:textColor="@color/text2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/plus"
        app:layout_constraintTop_toBottomOf="@+id/plus"
        app:layout_constraintEnd_toEndOf="@+id/plus"/>

    <Button
        android:id="@+id/multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:backgroundTint="@color/button"
        android:text="@string/multiply"
        android:textColor="@color/text2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer1"
        app:layout_constraintStart_toEndOf="@+id/plus"/>

    <Button
        android:id="@+id/division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/button"
        android:text="@string/division"
        android:textColor="@color/text2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/multiply"
        app:layout_constraintStart_toStartOf="@+id/multiply"
        app:layout_constraintTop_toBottomOf="@+id/multiply" />

    <Button
        android:id="@+id/converter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:text="@string/converter"
        android:textColor="@color/text2"
        app:rippleColor="@color/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/calculator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:text="@string/calculator"
        android:textColor="@color/text2"
        app:layout_constraintStart_toEndOf="@+id/converter"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:text="@string/future"
        android:textColor="@color/text2"
        app:layout_constraintStart_toEndOf="@id/calculator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/settings1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/text2"/>

</androidx.constraintlayout.widget.ConstraintLayout>